--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,11 +1,21 @@
 @media only screen and (max-width: 1108px){
-    
-}
-
-.wrapper{
+    .wrapper{
   width: 90%;
 }
-#social{
-  width: auto;
-  
+  #social{
+    width: auto;
+    }
+}
+
+@media only tablets and (max-width:900px){
+  body{
+    font-size:85%;
+  }
+  #logo h1{
+    height:35px;
+    width:35px;
+  }
+  #logo h2{
+    font-size:2.2em;
+  }
 }
